re-did architecture, added more mock data, removed old d3 code and added angular-nvd3

--- a/src/client/app/components/chart/chart.html
+++ b/src/client/app/components/chart/chart.html
@@ -1,1 +1,4 @@
-<span d3-directive>Chart works!</span>
+<div ng-init="vm.init()">
+    <nvd3 options="vm.chartOptions" data="vm.chartData"></nvd3>
+</div>
+
