--- a/src/client/app/components/returnReasonForm/returnReasonForm.html
+++ b/src/client/app/components/returnReasonForm/returnReasonForm.html
@@ -1,13 +1,17 @@
 <div class="container" ng-init="vm.init()">
     <div class="form-group">
         <form name="returnForm" ng-submit="vm.submit()">
-            <label for="category">
+            <label for="category">category</label>
                 <select id="category" ng-model="vm.form.category">
                     <option ng-repeat="category in vm.categories" value="{{category}}">{{category}}</option>
                 </select>
-            </label>
+
             <md-datepicker ng-model="vm.form.startDateRaw" md-placeholder="Pick a start Date" md-hide-icons="calendar" ng-required></md-datepicker>
             <md-datepicker ng-model="vm.form.endDateRaw" md-placeholder="Pick an end date" md-hide-icons="calendar" ng-required></md-datepicker>
+            <label for="limit">limit</label>
+            <select name="limit" id="limit" ng-model="vm.form.limit">
+                <option ng-repeat="limitItem in vm.limits" value="{{limitItem}}" selected>{{limitItem}}</option>
+            </select>
             <button class="submit" type="submit">Submit</button>
         </form>
     </div>
