--- a/src/client/app/components/returnReasonForm/returnReasonForm.html
+++ b/src/client/app/components/returnReasonForm/returnReasonForm.html
@@ -2,17 +2,16 @@
     <div class="form-group">
         <form name="returnForm" ng-submit="vm.submit()">
             <label for="category">category</label>
-                <select id="category" ng-model="vm.form.category">
+                <select id="category" ng-model="vm.reasonFormCategory">
                     <option ng-repeat="category in vm.categories" value="{{category}}">{{category}}</option>
                 </select>
-
-            <md-datepicker ng-model="vm.form.startDateRaw" md-placeholder="Pick a start Date" md-hide-icons="calendar" ng-required></md-datepicker>
-            <md-datepicker ng-model="vm.form.endDateRaw" md-placeholder="Pick an end date" md-hide-icons="calendar" ng-required></md-datepicker>
+            <md-datepicker ng-model="vm.reasonFormStartDate" md-placeholder="Pick a start Date" md-hide-icons="calendar" ng-required></md-datepicker>
+            <md-datepicker ng-model="vm.reasonFormEndDate" md-placeholder="Pick an end date" md-hide-icons="calendar" ng-required></md-datepicker>
             <label for="limit">limit</label>
-            <select name="limit" id="limit" ng-model="vm.form.limit">
-                <option ng-repeat="limitItem in vm.limits" value="{{limitItem}}" selected>{{limitItem}}</option>
+            <select name="limit" id="limit" ng-model="vm.reasonFormLimit">
+                <option ng-repeat="limit in vm.limits" value="{{limit}}" selected>{{limit}}</option>
             </select>
-            <button class="submit" type="submit">Submit</button>
+            <input class="btn-primary" type="submit" value="Submit">
         </form>
     </div>
 </div>
