--- a/src/client/app/components/returnReasonForm/returnReasonForm.html
+++ b/src/client/app/components/returnReasonForm/returnReasonForm.html
@@ -11,7 +11,7 @@
             <select id="limit" ng-model="vm.reasonFormLimit">
                 <option ng-repeat="limit in vm.limits" value="{{limit}}">{{limit}}</option>
             </select>
-            <input class="btn-primary" type="submit" value="Submit">
+            <input class="btn btn-primary" type="submit" value="Submit">
         </form>
     </div>
 </div>
