--- a/src/client/app/components/returnReasonForm/returnReasonForm.html
+++ b/src/client/app/components/returnReasonForm/returnReasonForm.html
@@ -1,7 +1,7 @@
 <div class="container" ng-init="vm.init()">
     <div class="form-group">
         <h3 class="text-center">Number of reasons for returns over time</h3>
-        <form name="returnForm" ng-submit="vm.submit()">
+        <form name="returnForm" ng-submit="vm.submit()" novalidate>
             <label for="category">category</label>
                 <select id="category" ng-model="vm.reasonFormCategory">
                     <option ng-repeat="category in vm.categories" value="{{category}}">{{category}}</option>
@@ -9,7 +9,7 @@
             <md-datepicker ng-model="vm.reasonFormStartDate" md-placeholder="Pick a start Date" md-hide-icons="calendar" ng-required></md-datepicker>
             <md-datepicker ng-model="vm.reasonFormEndDate" md-placeholder="Pick an end date" md-hide-icons="calendar" ng-required></md-datepicker>
             <label for="limit">limit</label>
-            <select id="limit" ng-model="vm.reasonFormLimit">
+            <select id="limit" ng-model="vm.reasonFormLimit" required>
                 <option value="10" selected>10</option>
                 <option ng-repeat="limit in vm.limits" value="{{limit}}">{{limit}}</option>
             </select>
