removed unnescesary labels

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -729,6 +729,11 @@ a {
 }
 /*#endregion */
 
+.navbar > .container-fluid  > .navbar-header {
+    margin-bottom: 25px !important;
+
+}
+
 /*#region Responsive */
 
 @media (max-width: 979px) {
