--- a/src/client/app/components/header/header.html
+++ b/src/client/app/components/header/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
-        <div class="navbar-header">
+        <div id="navbarHeader" class="navbar-header">
             <a class="navbar-brand" href="#">
                 <img alt="SupplyAi" src="images/supply-brand.png">
             </a>
