added node version

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -729,8 +729,8 @@ a {
 }
 /*#endregion */
 
-.navbar > .container-fluid  > .navbar-header {
-    margin-bottom: 25px !important;
+.navbar > .container-fluid  > #navbarHeader {
+    margin-bottom: 25px;
 
 }
 
