removed unnesscary text

--- a/src/client/app/components/returnReasonForm/returnReasonForm.html
+++ b/src/client/app/components/returnReasonForm/returnReasonForm.html
@@ -1,6 +1,6 @@
 <div class="container" ng-init="vm.init()">
     <div class="form-group">
-        <h3 class="text-center">Number of reasons for returns over time</h3>
+        <h3 class="text-center">Reasons for returns over time</h3>
         <form name="returnForm" ng-submit="vm.submit()" novalidate>
             <label for="category">category</label>
                 <select id="category" ng-model="vm.reasonFormCategory">
