removed generated CSS, fixed some styling. Fixed yAxis Labels for lineChart

--- a/src/client/app/components/header/header.html
+++ b/src/client/app/components/header/header.html
@@ -2,8 +2,11 @@
     <div class="container-fluid">
         <div id="navbarHeader" class="navbar-header">
             <a class="navbar-brand" href="#">
-                <img alt="SupplyAi" src="images/supply-brand.png">
+                <img class="img-responsive" alt="SupplyAi" src="images/supply-brand.png">
             </a>
+        </div>
+        <div class="nav navbar-right hidden-sm">
+            <p id="authorText">Created By Robert Caw Brush</p>
         </div>
     </div>
 </nav>
