--- a/src/client/app/components/returnOrderForm/returnOrderForm.html
+++ b/src/client/app/components/returnOrderForm/returnOrderForm.html
@@ -3,15 +3,15 @@
         <h3 class="text-center">Number of returns over time</h3>
         <form name="returnForm" ng-submit="vm.submit()">
             <label for="category">category</label>
-                <select id="category" ng-model="vm.orderFormCategory">
+                <select id="category" ng-model="vm.orderForm.category">
                     <option ng-repeat="category in vm.categories" value="{{category}}">{{category}}</option>
                 </select>
             <label for="groupby">group by</label>
-            <select id="groupby" ng-model="vm.orderFormGroupby">
+            <select id="groupby" ng-model="vm.orderForm.groupby">
                 <option ng-repeat="group in vm.groupBy" value="{{group}}">{{group}}</option>
             </select>
-            <md-datepicker id="startDate" ng-model="vm.orderFormStartDate" md-placeholder="Pick a start Date" md-hide-icons="calendar" ng-required></md-datepicker>
-            <md-datepicker id="endDate" ng-model="vm.orderFormEndDate" md-placeholder="Pick an end date" md-hide-icons="calendar" ng-required></md-datepicker>
+            <md-datepicker id="startDate" ng-model="vm.orderForm.startDate" md-placeholder="Pick a start Date" md-hide-icons="calendar" ng-required></md-datepicker>
+            <md-datepicker id="endDate" ng-model="vm.orderForm.endDate" md-placeholder="Pick an end date" md-hide-icons="calendar" ng-required></md-datepicker>
             <input class="btn btn-primary" type="submit" value="Submit">
         </form>
     </div>
